# lecture-notes-assistant

./: .dev.vars.example  .gitignore  README.md  package-lock.json  package.json  schema.sql  wrangler.toml
docs/: desktop-tauri.md  system-design.md
functions/api/: state.js
src/: app.js  index.html  manifest.webmanifest  style.css  sw.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
