[package]
name = "lecture-notes-todo"
version = "0.2.0"
edition = "2021"
description = "听课笔记桌面 Todo 小组件"

[lib]
name = "lecture_notes_todo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
